--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <header class="header">
+        <nav class="header-nav">
+           <div class="header-nav-left">
+            <img src="/img/Group 7.svg" alt="" class="header-nav__img">
+            <ul class="header-nav-list">
+                <li class="header-nav-list__item">Destination</li>
+                <li class="header-nav-list__item">Expierience</li>
+                <li class="header-nav-list__item">About</li>
+                <li class="header-nav-list__item">Gallery       </li>
+            </ul>
+           </div>
+            <img src="/img/Vector.svg" alt="" class="header-nav__search">
+        </nav>
+    </header>
+
+
 <script src="/script.js"></script>
 </body>
 </html>
