end something important

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
            </div>
             <img src="/img/Vector.svg" alt="" class="header-nav__search">
         </nav>
+            <div class="header-prikol">
+                <h2 class="header-prikol__title">Explore <br> dotochka</h2>
+                <button class="header-prikol__button">Start trawelling</button>
+            </div>
     </header>
 
 
