--- a/index.html
+++ b/index.html
@@ -24,7 +24,36 @@
                 <h2 class="header-prikol__title">Explore <br> dotochka</h2>
                 <button class="header-prikol__button">Start trawelling</button>
             </div>
+            <div class="header-reklama">
+                <div class="header-reklama-fragment">
+                    <p class="header-reklama-fragment__num">01</p>
+                    <h3 class="header-reklama-fragment__title">Title here</h3>
+                    <p class="header-reklama-fragment__text">Lorem ipsum dolor sit amet et amet ist ame.</p>
+                </div>
+            <div class="header-reklama-fragment">
+                <p class="header-reklama-fragment__num">02</p>
+                <h3 class="header-reklama-fragment__title">Title here</h3>
+                <p class="header-reklama-fragment__text">Lorem ipsum dolor sit amet et amet ist ame.</p>
+            </div>
+            <div class="header-reklama-fragment">
+                <p class="header-reklama-fragment__num">03</p>
+                <h3 class="header-reklama-fragment__title">Title here</h3>
+                <p class="header-reklama-fragment__text">Lorem ipsum dolor sit amet et amet ist ame.</p>
+            </div>
+            <div class="header-reklama-fragment">
+            </div>
+            </div>
     </header>
+    <main class="main">
+        <div class="main-top">
+            <img src="/img/Rectangle 9 (1).png" alt="" class="main-top__photo">
+            <div class="main-top-block">
+                <h4 class="main-top-block__title">The walkways of <br> Indonesia spellbind</h4>
+                <p class="main-top-block__text">Lorem ipsum dolor sit amet, consectetur adip <br> iscing elit. Fusce commodo magna et libero <br> mollis rhoncus. </p>
+                <button class="main-top-block__button">Learn more</button>
+            </div>
+        </div>
+    </main>
 
 
 <script src="/script.js"></script>
