add new pick and a bit stuff

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                 <button class="main-top-block__button">Learn more</button>
             </div>
         </div>
-        <div class="main-top">
-            <div class="main-top-block">
-                <h4 class="main-top-block__title">The walkways of <br> Indonesia spellbind</h4>
-                <p class="main-top-block__text">Lorem ipsum dolor sit amet, consectetur adip <br> iscing elit. Fusce
+        <div class="main-bot">
+            <div class="main-bot-block">
+                <h4 class="main-bot-block__title">The walkways of <br> Indonesia spellbind</h4>
+                <p class="main-bot-block__text">Lorem ipsum dolor sit amet, consectetur adip <br> iscing elit. Fusce
                     commodo magna et libero <br> mollis rhoncus. </p>
-                <button class="main-top-block__button">Learn more</button>
+                <button class="main-bot-block__button">Learn more</button>
             </div>
-            <img src="/img/Rectangle 9 (1).png" alt="" class="main-top__photo">
+            <img src="/img/Rectangle 9 (1).png" alt="" class="main-bot__photo">
         </div>
     </main>
     <section class="explore">
