--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
         </div>
         <div class="explore-numbers">
             <div class="explore-numbers-start">
-                <h2 class="score-number__title">By The Numbers</h2>
-            <p class="score-number__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna
+                <h2 class="explore-numbers__title">By The Numbers</h2>
+            <p class="explore-numbers__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce commodo magna
                 et libero.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
-            <div class="score-number-cards">
-                <div class="score-number-cards-item">
-                    <h3 class="score-number-cards-item__title">100+</h3>
-                    <p class="score-number-cards-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <div class="score-numbers-cards">
+                <div class="score-numbers-cards-item">
+                    <h3 class="score-numbers-cards-item__title">100+</h3>
+                    <p class="score-numbers-cards-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Fusce commodo magna et libero.</p>
                 </div>
                 <div class="score-number-cards-item">
@@ -118,16 +118,16 @@
 
     </section>
     <section class="reviews">
-        <h3 class="reviews__title"></h3>
+        <h3 class="reviews__title">Відгуки</h3>
         <div class="reviews-cards">
             <div class="reviews-cards-item">
+                <img class="reviews-card-item-avatar" src="/img/Avatar1.png" alt="avatar">
                 <p class="reviews-card-item-desc">Sneakers are very
                     comfortable and well
                     painted, nothing has
                     worn off in a year.</p>
                 <span class="reviews-card-item-date">25.11</span>
                 <div class="reviews-card-item-container">
-                    <img class="reviews-card-item-avatar" src="/img/Avatar1.png" alt="avatar">
                     <p class="reviews-card-item-name">John Teylor <br><span class="item-name-year">With us from
                             2018</span>
                     </p>
@@ -140,7 +140,7 @@
                     They match all my clothes.</p>
                     <span class="reviews-card-item-date">05.01</span>
                     <div class="reviews-card-item-container">
-                        <img class="reviews-card-item-avatar" src="/img/Avatar2.png" alt="">
+                        <img class="reviews-card-item-avatar" src="/img/Avatar1.png" alt="avatar">
                         <p class="reviews-card-item-name">Elizabeth Garsia <br><span class="item-name-year">With us from 2020</span>
                     </p>
                     </div>
@@ -151,7 +151,7 @@
                     They match all my clothes.</p>
                     <span class="reviews-card-item-date">05.01</span>
                     <div class="reviews-card-item-container">
-                        <img class="reviews-card-item-avatar" src="/img/Avatar2.png" alt="">
+                        <img class="reviews-card-item-avatar" src="/img/Avatar1.png" alt="avatar">
                         <p class="reviews-card-item-name">Elizabeth Garsia <br><span class="item-name-year">With us from 2020</span>
                     </p>
                     </div>
