--- a/index.html
+++ b/index.html
@@ -98,15 +98,15 @@
             </div>
    </div>
 
-        <div class="explore-numbers">
-            <div class="explore-numbers-start">
-                <h2 class="explore-numbers__title">By The Numbers</h2>
-            <p class="explore-numbers__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, culpa. Architecto consequuntur consectetur exercitationem minima mollitia nostrum error neque! Molestias possimus temporibus est tempora repellendus sapiente ratione ea a. Dolore.</p>
+        <div class="explore-number">
+            <div class="explore-number-start">
+                <h2 class="explore-number__title">By The Numbers</h2>
+            <p class="explore-number__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, culpa. Architecto consequuntur consectetur exercitationem minima mollitia nostrum error neque! Molestias possimus temporibus est tempora repellendus sapiente ratione ea a. Dolore.</p>
             </div>
-            <div class="score-numbers-cards">
-                <div class="score-numbers-cards-item">
-                    <h3 class="score-numbers-cards-item__title">100+</h3>
-                    <p class="score-numbers-cards-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            <div class="score-number-cards">
+                <div class="score-number-cards-item">
+                    <h3 class="score-number-cards-item__title">100+</h3>
+                    <p class="score-number-cards-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Fusce commodo magna et libero.</p>
                 </div>
                 <div class="score-number-cards-item">
@@ -163,8 +163,7 @@
 
     </section>
 
-    <div class="fotter-wraper">
-        <div class="container">
+    <div class="footer-wraper">
             <div class="footer">
                 <div class="footer-top">
                     <div class="footer-top-left">
@@ -189,7 +188,6 @@
 
                 </div>
             </div>
-        </div>
     </div>
         
 
