--- a/index.html
+++ b/index.html
@@ -13,66 +13,74 @@
     <header class="header">
         <nav class="header-nav">
             <div class="header-nav-left">
-                <img src="/img/Group 7.svg" alt="" class="header-nav__img">
-                <ul class="header-nav-list">
-                    <li class="header-nav-list__item">Destination</li>
-                    <li class="header-nav-list__item">Expierience</li>
-                    <li class="header-nav-list__item">About</li>
-                    <li class="header-nav-list__item">Gallery </li>
-                </ul>
             </div>
-            <img src="/img/Vector.svg" alt="" class="header-nav__search">
         </nav>
         <div class="header-prikol">
-            <h2 class="header-prikol__title">Explore<br><span>dotochka</span></h2>
+            <h2 class="header-prikol__title">Dota 2<br><span>Guide</span></h2>
             <button class="header-prikol__button">Start trawelling</button>
         </div>
         <div class="header-reklama">
            <a href="#main">
             <div class="header-reklama-fragment">
-                <p class="header-reklama-fragment__num">01</p>
-                <h3 class="header-reklama-fragment__title">Title here</h3>
-                <p class="header-reklama-fragment__text">Lorem ipsum dolor sit amet et amet ist ame.</p>
+                <h3 class="header-reklama-fragment__title">Строения</h3>
             </div>
            </a>
-           <a href="#explore">
+           <a href="#hero">
             <div class="header-reklama-fragment">
-                <p class="header-reklama-fragment__num">02</p>
-                <h3 class="header-reklama-fragment__title">Title here</h3>
-                <p class="header-reklama-fragment__text">Lorem ipsum dolor sit amet et amet ist ame.</p>
+                <h3 class="header-reklama-fragment__title">Герои</h3>
             </div>
            </a>
-            <a href="#reviews">
-                <div class="header-reklama-fragment">
-                    <p class="header-reklama-fragment__num">03</p>
-                    <h3 class="header-reklama-fragment__title">Title here</h3>
-                    <p class="header-reklama-fragment__text">Lorem ipsum dolor sit amet et amet ist ame.</p>
-                </div>
-            </a>
+           <a href="#rune">
             <div class="header-reklama-fragment">
+                <h3 class="header-reklama-fragment__title">Предметы и руны</h3>
             </div>
+           </a>
+           <a href="">
+            <div class="header-reklama-fragment">
+                <h3 class="header-reklama-fragment__title">Фарм и экспа</h3>
+            </div>
+           </a>
         </div>
     </header>
     <main id="main" class="main">
         <div class="main-top">
-            <img src="/img/Rectangle 9 (1).png" alt="" class="main-top__photo">
+            <img src="/img/тавера.webp" alt="" class="main-top__photo">
             <div class="main-top-block">
-                <h4 class="main-top-block__title">The walkways of <br> Indonesia spellbind</h4>
-                <p class="main-top-block__text">Lorem ipsum dolor sit amet, consectetur adip <br> iscing elit. Fusce
-                    commodo magna et libero <br> mollis rhoncus. </p>
-                <button class="main-top-block__button">Learn more</button>
+                <h4 class="main-top-block__title">Снос зданий – главная цель <br> </h4>
+                <p class="main-top-block__text">Ключевой целью обеих команд в Дота 2 является разрушение «древнего» или, как его принято называть среди игроков, «трона». Главная проблема заключается в том, что изначально трон является неуязвимым строением, и для того, чтобы снять с него защиту, нужно будет сломать ряд зданий. Таким образом, существует несколько категорий строений: <br>  </p>
+                <button class="main-top-block__button">Полная карта</button>
             </div>
         </div>
         <div class="main-bot">
             <div class="main-bot-block">
-                <h4 class="main-bot-block__title">The walkways of <br> Indonesia spellbind</h4>
-                <p class="main-bot-block__text">Lorem ipsum dolor sit amet, consectetur adip <br> iscing elit. Fusce
-                    commodo magna et libero <br> mollis rhoncus. </p>
-                <button class="main-bot-block__button">Learn more</button>
+                <p class="main-bot-block__text">Т1. Первая череда башен, которая может быть атакована сразу после начала игры. На эти башни не действует защита от скрытного нападения (бэкдор). <br>Т2. Неуязвимы до того момента, пока не будет сломана Т1-башня. Наносят больше повреждений и крепче, чем Т1. <br> Т3. Неуязвимы до момента падения Т2. <br> Т4. Неуязвимы до момента падения любой Т3-башни (независимо от линии). <br> Бараки. После уничтожения вражеского барака по линии начинают идти усиленные союзные крипы соответствующего типа. <br> Трон. Не атакует, не дает регенерацию, его уничтожение является главной целью игры. Регенерирует очки прочности. </p>
             </div>
-            <img src="/img/Rectangle 9 (1).png" alt="" class="main-bot__photo">
+            <img src="/img/бараки.webp" alt="" class="main-bot__photo">
         </div>
     </main>
+    <div id="hero" class="hero">
+        <div class="hero-top">
+            <img src="/img/Phantom_Assassin_icon-Picsart-AiImageEnhancer.webp" alt="" class="hero-top__photo">
+            <div class="phantom-menu">
+                <div class="phantom-stat">
+                    <img src="/img/agility-icon.png" alt="Ловкость" class="phantom-stat__icon">
+                    <span class="phantom-stat__text">Тип: Ловкость</span>
+                </div>
+                <h2 class="phantom-name">Phantom Assassin</h2>
+                <p class="phantom-desc">Убийца с критами, играет на лейте, легко учится — опасна в затяжных боях.</p>
+            </div>
+            <div class="hero-top-block">
+                <h4 class="hero-top-block__title">Персонажи Дота 2 для новичков <br> </h4>
+                <p class="hero-top-block__text">Все персонажи Дота 2 имеют огромное количество тонкостей и фишек, изучение которых занимает огромное количество времени. Чтобы освоиться для начала в азах самой игры, лучше обратить внимание на самых простых героев: <br>Sniper. Просто расстреливает противников и постройки с большой дистанции. <br> Wraith King. Простота его заключается в том, что у него всего одна активная способность. <br> Bristleback. Крайне устойчивый к урону, имеет возможность стоять, где угодно. В драке должен просто бегать и нажимать две простые способности. <br> Phantom Assassin. Имеет два простых и направленных скилла. <br> Ursa. Просто бьет героев и быстро их убивает. </p>
+            </div>
+        </div>
+        <div class="hero-bot">
+            <div class="hero-bot-block">
+                <p class="hero-bot-block__text">Герои Дота 2 для новичков, желающих играть на позиции поддержки (саппорт), будут следующими: <br> Treant Protector. Ходит в невидимости рядом с деревьями и просто бьет врагов, останавливая их. <br> Lich. Имеет только направленные заклинания, которые легко использовать. <br> Ogre Magi. Устойчив, имеет простые направленные заклинания. </p>
+            </div>
+            <img src="/img/бараки.webp" alt="" class="hero-bot__photo">
+        </div>
+    </div>
     <section id="explore" class="explore">
         <h2 class="explore-title">Explore Our Secrets</h2>
         <div class="explore-number">
@@ -118,7 +126,7 @@
                 <p class="reviews-card-item-name">KOMPUTERSEM<br><span class="item-name-year"></span>
                 </p>
                 <p class="reviews-card-item-desc">Я лудоман со стажем. Я слил тищу, мать наругала, заставила мыть посуду, не советую, <span class="reviews-card-item-desc-dop">КААЛ</span> . Зато вывел юсп за двадцатку
-                    25.11</p>
+                </p>
                     <div class="reviews-card-item-container">
                     </div>
                 
@@ -128,7 +136,7 @@
                 <p class="reviews-card-item-name">legendaTheBest<br><span class="item-name-year"></span>
                 </p>
                 <p class="reviews-card-item-desc">Я лудоман со стажем. Я слил тищу, мать наругала, заставила мыть посуду, не советую, КААЛ. Зато вывел юсп за двадцатку
-                    25.11</p>
+                </p>
                     <div class="reviews-card-item-container">
                     </div>
                 
