--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </div>
         <div class="header-reklama">
            <a href="#main">
-            <div class="header-reklama-fragment">
+            <div class="header-reklama-fragment first">
                 <h3 class="header-reklama-fragment__title">Строения</h3>
             </div>
            </a>
            <a href="#hero">
-            <div class="header-reklama-fragment">
+            <div class="header-reklama-fragment second">
                 <h3 class="header-reklama-fragment__title">Герои</h3>
             </div>
            </a>
@@ -61,14 +61,7 @@
     <div id="hero" class="hero">
         <div class="hero-top">
             <img src="/img/Phantom_Assassin_icon-Picsart-AiImageEnhancer.webp" alt="" class="hero-top__photo">
-            <div class="phantom-menu">
-                <div class="phantom-stat">
-                    <img src="/img/agility-icon.png" alt="Ловкость" class="phantom-stat__icon">
-                    <span class="phantom-stat__text">Тип: Ловкость</span>
-                </div>
-                <h2 class="phantom-name">Phantom Assassin</h2>
-                <p class="phantom-desc">Убийца с критами, играет на лейте, легко учится — опасна в затяжных боях.</p>
-            </div>
+            <p class="hero-top-menu">герой ловкач</p>
             <div class="hero-top-block">
                 <h4 class="hero-top-block__title">Персонажи Дота 2 для новичков <br> </h4>
                 <p class="hero-top-block__text">Все персонажи Дота 2 имеют огромное количество тонкостей и фишек, изучение которых занимает огромное количество времени. Чтобы освоиться для начала в азах самой игры, лучше обратить внимание на самых простых героев: <br>Sniper. Просто расстреливает противников и постройки с большой дистанции. <br> Wraith King. Простота его заключается в том, что у него всего одна активная способность. <br> Bristleback. Крайне устойчивый к урону, имеет возможность стоять, где угодно. В драке должен просто бегать и нажимать две простые способности. <br> Phantom Assassin. Имеет два простых и направленных скилла. <br> Ursa. Просто бьет героев и быстро их убивает. </p>
