change from Segrey

--- a/index.html
+++ b/index.html
@@ -60,8 +60,16 @@
     </main>
     <div id="hero" class="hero">
         <div class="hero-top">
-            <img src="/img/Phantom_Assassin_icon-Picsart-AiImageEnhancer.webp" alt="" class="hero-top__photo">
-            <p class="hero-top-menu">герой ловкач</p>
+            <div class="hero-top-container">
+                <img src="/img/Phantom_Assassin_icon-Picsart-AiImageEnhancer.webp" alt="" class="hero-top__photo">
+                <div class="hero-top-dropdawn">
+                    <h3 class="hero-top-dropdawn-quality"> <img class="hero-top-dropdawn-logo" src="/img/hero_logo.png" alt="..."> Ловкость </h3>
+                    <h2 class="hero-top-dropdawn-name">Phantom Assassin</h2>
+                    <p class="hero-top-dropdawn-desc">Прыгает к врагам и наносит <br> им критические удары</p>
+                </div>
+            </div>
+
+            <!-- <p class="hero-top-menu">герой ловкач</p> -->
             <div class="hero-top-block">
                 <h4 class="hero-top-block__title">Персонажи Дота 2 для новичков <br> </h4>
                 <p class="hero-top-block__text">Все персонажи Дота 2 имеют огромное количество тонкостей и фишек, изучение которых занимает огромное количество времени. Чтобы освоиться для начала в азах самой игры, лучше обратить внимание на самых простых героев: <br>Sniper. Просто расстреливает противников и постройки с большой дистанции. <br> Wraith King. Простота его заключается в том, что у него всего одна активная способность. <br> Bristleback. Крайне устойчивый к урону, имеет возможность стоять, где угодно. В драке должен просто бегать и нажимать две простые способности. <br> Phantom Assassin. Имеет два простых и направленных скилла. <br> Ursa. Просто бьет героев и быстро их убивает. </p>
